no fixed bg on mobile

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -51,6 +51,11 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
+
+    @media (max-width: media.$narrow) {
+        background-attachment: initial;
+        background-repeat: repeat-y;
+    }
 }
 
 a {
